welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: type getMondeHauteur
  var n=Int : getMondeHauteur
              ^